--- a/public/index.html
+++ b/public/index.html
@@ -15,3 +15,4 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4e77d9b3460eb3b942634fb28e5e1c40&libraries=services"></script>
